style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono&display=swap');
@import url(//fonts.googleapis.com/earlyaccess/nicomoji.css);
@import url(//fonts.googleapis.com/earlyaccess/nikukyu.css);
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@500;800&display=swap');

* {
  box-sizing: border-box; 
}

html{
  background-color: white;
  overflow-y: hidden;
  overflow-x: hidden;
  background-repeat: repeat;
  scroll-behavior: smooth;
}

body{
  margin: 0;
}

.container{
  width: 100%;
  height: 100%;
  overflow-y: scroll;
}
canvas {
  /* position: fixed; */
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0; 
  opacity: 1;
  background: #232323;
}

@media screen and (max-width: 768px) {
  canvas {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0; 
    opacity: 0.1;
    background: #232323;
  }
}
  

/* ------------------ scroll bar ----------------------- */

::-webkit-scrollbar {
  width: 6px;
  height: 5px;
}

::-webkit-scrollbar-thumb {
  background: rgb(248, 240, 131);
  /* background: rgba(172, 151, 250, 0.979); */
  border-radius: 10px;
}

::-webkit-scrollbar-track {
  background: #232323;
}
::-webkit-scrollbar-button {
  height: 5px;
}

/* ------------------------ Welcome ------------------- */
#wrapper {
  position: absolute;
  text-align: center;
  justify-content: center;
  margin-top: 10%;
  z-index: 1;
  margin-left: auto;
  left: 50%;
  top: 1%;
  -webkit-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}
#welcome{
  display: inline-block;
}
#welcome h1{
  font-family: 'Montserrat', sans-serif;
  font-size: 4.5rem;
  color: white;
  letter-spacing: 5px;
  font-weight: 500;
  text-align: center;
  align-items: center;
  justify-content: center;
}


.typing {
  color: #fff;
  width: 30ch;
  animation: typing 1.5s steps(35), blink 0.75s step-end infinite alternate;
  white-space: nowrap;
  overflow: hidden;
  border-right: 3px solid;
  font-family: 'JetBrains Mono', monospace;
  font-size: 15px;
  display: inline-block;
  text-align: center;
  justify-content: center;
}


@keyframes typing {
  from {
    width: 0
  }
}
    
@keyframes blink {
  50% {
    border-color: transparent
  }
}

/* ----------------------watermark-------------------------------- */
.watermark{
  position: absolute;
  top: 2%;
  left: 2%;
  width: 25%;
  height: 5%;
  z-index: 3;
  color: rgba(255, 255, 255, 0.25);
  font-family: 'Montserrat', sans-serif;
}

.jap-text{
  color: rgb(248, 240, 131);
  opacity: 0.9; 
  font-weight: 500;
  letter-spacing: 5px;
  font-family: 'Nico Moji', cursive;
}

/* ----------------------main div-------------------------------- */

.main-body{
  /* background: rgba(90, 90, 90, 1); */
  width: 75%;
  position: fixed;
  top: 35%;
  height: 35%;
  margin-left: 12.5%;
  z-index: 1;
  display: flex;
  margin-top: 3%;
  font-family: 'Montserrat', sans-serif;
}

.col-md-6{
  flex: 50%;
  align-items: center;
  text-align: center;
}

.border-right {
  border-right: 1px solid rgb(230, 230, 230);
}

/* ------------------- left items---------------------------------- */
.left-items{
  display: inline-block;
  vertical-align: middle;
  margin-top: 5%;
  color: rgb(248, 240, 131);
  margin-left: 35%;
  -webkit-animation: fadeIn-left 0.76s ease-in-out;
  -moz-animation: fadeIn-left 0.76s ease-in-out;
  -o-animation: fadeIn-left 0.76s ease-in-out;
  animation: fadeIn-left 0.76s ease-in-out;
}

@-webkit-keyframes fadeIn-left{
  0%{
    opacity: 0;
    -webkit-transform: translateX(-100px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@-o-keyframes fadeIn-left{
  0%{
    opacity: 0;
    -o-transform: translateX(-100px);
  }
  100%{
    opacity: 1;
    -o-transofmr: translateX(0);
  }
}
@-moz-keyframes fadeIn-left{
  0%{
    opacity: 0;
    -moz-transform: translateX(-100px);
  }
  100%{
    opacity: 1;
    -moz-transofmr: translateX(0);
  }
}
@keyframes fadeIn-left{
  0%{
    opacity: 0;
    transform: translateX(-100px);
  }
  100%{
    opacity: 1;
    transofmr: translateX(0);
  }
}


.pfp-image{
  width: 30%;
  border-radius: 50%;
  border: 2px solid rgb(248, 240, 131);
}

.signature p{
  font-size: 1rem;
  color: white;
  font-style: italic;
  font-family: 'Montserrat', sans-serif;
  -webkit-animation: fadeIn-left 1.36s ease-in-out;
  -moz-animation: fadeIn-left 1.36s ease-in-out;
  -o-animation: fadeIn-left 1.36s ease-in-out;
  animation: fadeIn-left 1.36s ease-in-out;
}

/* ------------------- right items---------------------------------- */

.right-items{
  text-align: left;
  -webkit-animation: fadeIn-right 0.76s ease-in-out;
  -moz-animation: fadeIn-right 0.76s ease-in-out;
  -o-animation: fadeIn-right 0.76s ease-in-out;
  animation: fadeIn-right 0.76s ease-in-out;
}

.col-md-6.right{
  /* background-color: black; */
}

@-webkit-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -webkit-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@-o-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -o-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -o-transofmr: translateX(0);
  }
}
@-moz-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -moz-transform: translateX(50px);
  }
  100%{
    opacity: 1;
    -moz-transofmr: translateX(0);
  }
}
@keyframes fadeIn-right{
  0%{
    opacity: 0;
    transform: translateX(50px);
  }
  100%{
    opacity: 1;
    transofmr: translateX(0);
  }
}

/* ------------------------about ------------------------------ */

.right-title{
  display: inline-block;
  vertical-align: middle;
  margin-left: 5%;
  color: rgb(248, 240, 131);
  letter-spacing: 5px;
}

.right-title h1{
  margin: 0;
  padding: 0;
  margin-left: 4%;
}

.about-section p{
  margin: 0;
  padding: 0;
  margin-left: 3%;
  color: rgb(230, 230, 230);
  font-size: 0.9rem;
  font-family: 'Montserrat', sans-serif;
  letter-spacing: 1px;
  margin-top: 3%;
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}

.fa-caret-right{
  font-size: 1rem;
}

/* ---------------------------languages-------------------------- */


.languages{
  margin-left: 6.25%;
  margin-top: 3%;
  font-family: 'Montserrat', sans-serif;
}

.languages p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1%;
  -webkit-animation: fadeIn-right-lang 2.5s ease-in-out;
  -moz-animation: fadeIn-right-lang 2.5s ease-in-out;
  -o-animation: fadeIn-right-lang 2.5s ease-in-out;
  animation: fadeIn-right-lang 2.5s ease-in-out;
}

@-webkit-keyframes fadeIn-right-lang{
  0%{
    opacity: 0;
    -webkit-transform: translateX(75px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@-o-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -webkit-transform: translateX(75px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@-moz-keyframes fadeIn-right{
  0%{
    opacity: 0;
    -webkit-transform: translateX(75px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}
@keyframes fadeIn-right{
  0%{
    opacity: 0;
    -webkit-transform: translateX(75px);
  }
  100%{
    opacity: 1;
    -webkit-transofmr: translateX(0);
  }
}

.languages p:before {
  font-family: FontAwesome;
  content: "\f121";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}

/* ---------------------------discord-------------------------- */

.discord{
  margin-left: 6.25%;
  margin-top: 3%;
  font-family: 'Montserrat', sans-serif;
}

.discord p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.discord p:before{
  font-family: FontAwesome;
  content: "\f392";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
}

/* ---------------------------anilist------------------------- */

.github{
  margin-left: 6.5%;
  margin-top: 3%;
  font-family: 'Montserrat', sans-serif;
  max-width: 51%;
}
.github p>span{
  font-size: 0.9rem;
  color: rgb(230, 230, 230);
  letter-spacing: 1px;
  margin-left: 1.45%;
  display: inline-block;
  -webkit-animation: fadeIn-right 1.65s ease-in-out;
  -moz-animation: fadeIn-right 1.65s ease-in-out;
  -o-animation: fadeIn-right 1.65s ease-in-out;
  animation: fadeIn-right 1.65s ease-in-out;
}

.github p:before{
  font-family: FontAwesome;
  content: "\f09b";
  margin-right: 4px;  
  color:rgb(248, 240, 131);
  -webkit-animation: fadeIn-right 1.35s ease-in-out;
  -moz-animation: fadeIn-right 1.35s ease-in-out;
  -o-animation: fadeIn-right 1.35s ease-in-out;
  animation: fadeIn-right 1.35s ease-in-out;
  
}
a{
  text-decoration: none;
}


/* -------------------------footer----------------------------- */

#banner{
  position: absolute;
  background:rgba(90, 90, 90, 0.95);
  width: 100%;
  top: 90%;
  height: 10%;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 0.8rem;
  font-family: 'JetBrains Mono', monospace;
  box-shadow: 0px -1px 18px 1px rgba(0, 0, 0, 0.87);
  
}

.effect-wrapper {
  text-align: center;
  font-weight: normal;
  color: white; 
}


#typed {
  font-weight: bold;
  color: rgb(248, 240, 131);
}

.cursor {
  display: inline-block;
  background-color: #b0ff95;
  animation: blinker 800ms infinite;
}

.cursor.typing-true {
  animation: none;
}

@keyframes blinker {
	0% { background-color: rgb(248, 240, 131); }
	50% { background-color: transparent; }
	100% { background-color: rgb(248, 240, 131); }
}

